2001-07-12  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_rh62_interface_activate_by_dev):
	Don't do ifdown on the background. ifdown is fast enough, and
	launching ifup/ifdown almost at the same time doesn't seem like
	a good idea.
	(xst_network_suse70_interface_activate_by_dev): same.
	(xst_network_suse70_ppp_iface_activate): same.
	Print ifup/ifdown debug reports to STDERR to track problems.
	(xst_network_debian_woody_get_auto): Got confused by the double
	negation of "noauto". Fixed (#4538)

	* users-conf.in (xml_parse_users): Ignore files and shells
	tags when parsing, instead of complaining.
	(xml_parse_login_defs): files tag should be ignored here.

	* file.pl.in (xst_file_open_write_from_names): Wrong report
	call.

2001-07-11  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_interfaces_parse_table):
	Commented out dns[12] unsupported tags for debians.
	(xst_network_debian_woody_set_auto): Dunno what I was
	thinking when I first coded this. Fixed now.

	* parse.pl.in (xst_parse_trivial): Return undef if 0 args.

2001-07-12  Chema Celorio  <chema@celorio.com>

	* configure.in (dnl): try again
	
2001-07-12  Tambet Ingo  <tambet@ximian.com>

	* AUTHORS: Fixed my mail address :)

	* x.pl.in (x_add_keyword): Fixed stupid bug I introduced
	in my last commit. (new resolutions didn't get added).

	* display-conf.in (xml_parse): Fixed very strange bug:
	if run with new style "set" then everything worked, but
	not when run with --set. The problem was that $tree array
	had one extra empty element as a first one int the list.
	Other tools may suffer the same thing.
	(xml_parse): Added optional argument to parse from.
	(parse): Removed, was a single line nonsense.
	(test): Implement. Tests if X can start up and whether it's
	picture is readable.
	
2001-07-12  Chema Celorio  <chema@celorio.com>

	* configure.in (dnl): fix the scriptdirs thing
	
2001-07-11  Hans Petter Jansson  <hpj@ximian.com>
